motivational-quote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motivational-quote-service
  namespace: studyapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: motivational-quote-service
  template:
    metadata:
      labels:
        app: motivational-quote-service
    spec:
      containers:
        - name: motivational-quote-service
          image: fionachebet21932/motivational-quote-service:latest
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: motivational-quote-service
  namespace: studyapp
spec:
  ports:
    - port: 5002
      targetPort: 5002
  selector:
    app: motivational-quote-service
