ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studyapp-ingress
  namespace: studyapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "studyapp.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
          - path: /schedules
            pathType: Prefix
            backend:
              service:
                name: study-scheduler-service
                port:
                  number: 5001
          - path: /quotes
            pathType: Prefix
            backend:
              service:
                name: motivational-quote-service
                port:
                  number: 5002
